# QuantSwamp

./: CMakeLists.txt  README.md  run.sh
models/garch_models/: bekk_garch.cpp  c_garch.cpp  dcc_garch.cpp  garch_x.cpp  gjr_garch.cpp  m-garch.cpp  q_garch.cpp  r_garch.cpp  str_garch.cpp  t_garch.cpp
models/interest_rate_models/: black-derman-toy.cpp
models/kalman/: kalman-filter.cpp
models/monte-carlo/: simple-monte-carlo.cpp
models/optimization_models/: dynamic-programming.cpp  stochastic-programming.cpp
models/stochastic-processes/: jump-diffusion.cpp  markov-chain.cpp  poisson-process.cpp
newmat11/: NEWMAT2.CPP  NEWMAT4.CPP  NEWMAT6.CPP  NEWMAT7.CPP  NEWMATEX.CPP  SUBMAT.CPP  TEST_EXC.CPP  TMTM.CPP
newmat11/output/: PRECISIO
solvers/: LCP-solver-projected-SOR.cpp  Radial_Basis_Function_Interpolation.cpp  Stochastic_Gradient_Descent_for_NNs.cpp  alternating-direction-implicit-2d-basket-option.cpp  black-scholes.cpp  dupires-local-vol.cpp  gaussian-copula-simulation.cpp  least-squares-monte-carlo.cpp  mean-variance-optimization.cpp  var-monte-carlo.cpp  xva-metrics-cva-fva-calc.cpp
solvers/FDM/: explicit-fdm-american-put.cpp  explicit-fdm-w-cfl-condition.cpp  markowitz.cpp
solvers/output/: black-scholes  mean-variance-optimization  var-monte-carlo
src/newmat11/: INCLUDE.H  NEWMAT.H  NEWMAT5.CPP  NEWMAT9.CPP  NEWMATRC.H  NM11.HTM  NM_B56.MAK  NM_CC.MAK  NM_GNU.MAK  README  TMT.CPP  TMT.TXT  TMTE.CPP
src/solvers/: Discontinuous_Galerkin_Method_for_Hyperbolic_PDEs.cpp  Hamiltonian_Monte_Carlo_for_Bayesian_Inference.cpp  LCP-solver-projected-SOR.cpp  (+10 more)
(+67 files in other folders)
